adding edit profile, login, profile, custom JS views and logic

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,8 +23,12 @@
     
 <!-- FOOTER PARTIAL -->
     <% include ./partials/footer %>
-
-<!-- SCRIPTS -->    
+    
+<!-- JAVASCRIPT ONLY FILE -->
+  <% include ./partials/jsOnly %>
+  
+<!-- SCRIPTS -->  
+  <script type="text/javascript" src="/js/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   </body>
 </html>
